# person_reid_project

./: README.md  main.py  pyproject.toml
src/person_reid/: __init__.py
src/person_reid/api/: __init__.py  server.py
src/person_reid/behavior_analysis/: __init__.py  behavior_analyzer.py
src/person_reid/config/: settings.py
src/person_reid/detection/: __init__.py  person_detector.py
src/person_reid/pose_estimation/: __init__.py  pose_estimator.py
src/person_reid/utils/: __init__.py  logger.py  video_processor.py
